# convert2vkun

./: .gitignore  memo.txt  pyproject.toml  requirements.txt
c2v/: manage.py
c2v/c2v/: asgi.py  settings.py  urls.py  wsgi.py
c2v/convert/: cli_trans_yt_dlp.py  forms.py  models.py  urls.py  views.py  ytwrap.py
c2v/convert/static/convert/: convert.js
c2v/convert/templates/convert/: base.html  detail.html  index.html  login.html
