[tool.poetry]
name = "convert2vkun"
version = "0.1.0"
description = ""
authors = ["msaitou <peterpansymdromer@gmail.com>"]
package-mode = false
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djongo = "^1.3.6"
pymongo = "3.13"
pytz = "^2022.7.1"
gunicorn = "^20.1.0"
dnspython = "^2.3.0"
certifi = "^2022.12.7"
yt-dlp = "^2024.9.27"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
